// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshots for last year 1`] = `
<div
  className="InsightQuote InsightAboutTeamMembership"
  style={
    {
      "display": "flex",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <div
    style={
      {
        "display": "flex",
        "flex": 1,
        "margin": 20,
        "marginBottom": 0,
        "marginTop": 15,
      }
    }
  >
    <div
      style={
        {
          "display": "flex",
          "flex": 1,
          "flexDirection": "column",
          "overflow": "hidden",
        }
      }
    >
      <mocked-fit-text
        fontSizeStep={6}
        maxFontSize={42}
        minFontSize={12}
        text={
          <span>
            Mari
             was on the 
            <Team
              team={
                {
                  "active": false,
                  "activity_text": "Indoor Track - Girls Varsity",
                  "coach_text": "Eric Taylor",
                  "school_year_text": "2017-18",
                  "season_key": "winter",
                }
              }
            />
             team in 
            2017-18
          </span>
        }
      />
    </div>
  </div>
  <div
    style={
      {
        "alignItems": "flex-end",
        "display": "flex",
        "flexDirection": "row",
        "fontSize": 12,
        "justifyContent": "space-between",
        "margin": 20,
        "marginBottom": 15,
        "marginTop": 10,
      }
    }
  >
    <div>
      <div>
        <div>
          with coach 
          Eric Taylor
        </div>
        <div>
          during the 
          2017-18
           
          winter
           season
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`snapshots view 1`] = `
<div
  className="InsightQuote InsightAboutTeamMembership"
  style={
    {
      "display": "flex",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <div
    style={
      {
        "display": "flex",
        "flex": 1,
        "margin": 20,
        "marginBottom": 0,
        "marginTop": 15,
      }
    }
  >
    <div
      style={
        {
          "display": "flex",
          "flex": 1,
          "flexDirection": "column",
          "overflow": "hidden",
        }
      }
    >
      <mocked-fit-text
        fontSizeStep={6}
        maxFontSize={42}
        minFontSize={12}
        text={
          <span>
            Mari
             is on the 
            <Team
              team={
                {
                  "active": true,
                  "activity_text": "Indoor Track - Girls Varsity",
                  "coach_text": "Eric Taylor",
                  "school_year_text": "2018-19",
                  "season_key": "winter",
                }
              }
            />
             team
          </span>
        }
      />
    </div>
  </div>
  <div
    style={
      {
        "alignItems": "flex-end",
        "display": "flex",
        "flexDirection": "row",
        "fontSize": 12,
        "justifyContent": "space-between",
        "margin": 20,
        "marginBottom": 15,
        "marginTop": 10,
      }
    }
  >
    <div>
      <div>
        <div>
          with coach 
          Eric Taylor
        </div>
        <div>
          this 
          winter
           season
        </div>
      </div>
    </div>
  </div>
</div>
`;
